--- a/shopcar.html
+++ b/shopcar.html
@@ -47,8 +47,429 @@
 			<span class="shopcarimg"></span>
 			<h1 class="shopcar3">购物车</h1>
 		</div>
+		<div class="goods">
+			<div class="goods1">
+				<input class="goods_q1" type="checkbox"/>
+				<span class="goods_q2">全选</span>
+				<span class="goods_q3">商品名称</span>
+				<span class="goods_q4">单价</span>
+				<span class="goods_q5">数量</span>
+				<span class="goods_q6">小计</span>
+				<span class="goods_q7">删除</span>
+			</div>
+			<div class="goods2">
+				 <ul class="goods2_c1">
+                    <li class="goods2_c2">
+                        <input class="goods2_c3" type="checkbox"/>
+                        <a class="goods2_c4" href="#">
+                            <img 	class="Img_cart" src="img/sp4.jpg">
+                        </a>
+                        <p>金立手机，值得拥有</p>
+                    </li>
+                    <li class="goods2_c5">￥
+                    	<span class="goods2_c5span">1200</span>元
+                    </li>
+                    <li class="goods2_c6">
+                        <p class="reduce">-</p>
+                        <p class="number">1</p>
+                        <p class="add">+</p>
+                        <!--<p>现价<em>￥</em><span class="price"></span></p>-->
+                    </li>
+                    <li class="goods2_c7">
+                        <p class="goods2_money">￥
+                        	<span class="goods2_c6span">1200</span>元
+                        </p>
+                    </li>
+                   <li class="goods2_c8">
+                        <span class="remove">删除</span>
+                        <div class="isremove">
+                            <p>你确认删除该商品吗?</p>
+                            <span class="ok">ok</span><span class="no">容我再想想</span>
+                        </div>
+                    </li>
+                </ul>
+                <ul class="goods2_c1">
+                    <li class="goods2_c2">
+                        <input class="goods2_c3" type="checkbox"/>
+                        <a class="goods2_c4" href="#">
+                            <img 	class="Img_cart" src="img/sp4.jpg">
+                        </a>
+                        <p>金立手机，值得拥有</p>
+                    </li>
+                    <li class="goods2_c5">￥
+                    	<span class="goods2_c5span">1200</span>元
+                    </li>
+                    <li class="goods2_c6">
+                        <p class="reduce">-</p>
+                        <p class="number">1</p>
+                        <p class="add">+</p>
+                        <!--<p>现价<em>￥</em><span class="price"></span></p>-->
+                    </li>
+                    <li class="goods2_c7">
+                        <p class="goods2_money">￥
+                        	<span class="goods2_c6span">1200</span>元
+                        </p>
+                    </li>
+                   <li class="goods2_c8">
+                        <span class="remove">删除</span>
+                        <div class="isremove">
+                            <p>你确认删除该商品吗?</p>
+                            <span class="ok">ok</span><span class="no">容我再想想</span>
+                        </div>
+                    </li>
+                </ul>
+                <ul class="goods2_c1">
+                    <li class="goods2_c2">
+                        <input class="goods2_c3" type="checkbox"/>
+                        <a class="goods2_c4" href="#">
+                            <img 	class="Img_cart" src="img/sp4.jpg">
+                        </a>
+                        <p>金立手机，值得拥有</p>
+                    </li>
+                    <li class="goods2_c5">￥
+                    	<span class="goods2_c5span">1200</span>元
+                    </li>
+                    <li class="goods2_c6">
+                        <p class="reduce">-</p>
+                        <p class="number">1</p>
+                        <p class="add">+</p>
+                        <!--<p>现价<em>￥</em><span class="price"></span></p>-->
+                    </li>
+                    <li class="goods2_c7">
+                        <p class="goods2_money">￥
+                        	<span class="goods2_c6span">1200</span>元
+                        </p>
+                    </li>
+                   <li class="goods2_c8">
+                        <span class="remove">删除</span>
+                        <div class="isremove">
+                            <p>你确认删除该商品吗?</p>
+                            <span class="ok">ok</span><span class="no">容我再想想</span>
+                        </div>
+                    </li>
+                </ul>
+                <ul class="goods2_c1">
+                    <li class="goods2_c2">
+                        <input class="goods2_c3" type="checkbox"/>
+                        <a class="goods2_c4" href="#">
+                            <img 	class="Img_cart" src="img/sp4.jpg">
+                        </a>
+                        <p>金立手机，值得拥有</p>
+                    </li>
+                    <li class="goods2_c5">￥
+                    	<span class="goods2_c5span">1200</span>元
+                    </li>
+                    <li class="goods2_c6">
+                        <p class="reduce">-</p>
+                        <p class="number">1</p>
+                        <p class="add">+</p>
+                        <!--<p>现价<em>￥</em><span class="price"></span></p>-->
+                    </li>
+                    <li class="goods2_c7">
+                        <p class="goods2_money">￥
+                        	<span class="goods2_c6span">1200</span>元
+                        </p>
+                    </li>
+                   <li class="goods2_c8">
+                        <span class="remove">删除</span>
+                        <div class="isremove">
+                            <p>你确认删除该商品吗?</p>
+                            <span class="ok">ok</span><span class="no">容我再想想</span>
+                        </div>
+                    </li>
+                </ul>
+			</div>
+		</div>
+		<div class="shopcar_s1">
+            <p>亲，你的购物车是空的哦，快去挑选商品吧</p>
+        </div>
+        <div class="pay">
+            <p>共计￥<span class="price_pay">0</span>元	</p>
+            <p class="Settlement">去结算</p>
+        </div>
 	</div>
 </div>
-
+<!--第二部分-->
+<div class="pinpai">
+	<div class="box1">
+		<a href="#" class="tuihuo">
+			<i class="baoz"></i>
+			<div class="sever">
+			<span>7天</span>
+			<span>退货保障</span>
+			</div>
+		</a>
+		<a href="#" class="tuihuo t1">
+			<i class="baoz"></i>
+			<div class="sever">
+			<span>30天</span>
+			<span>换货承诺</span>
+			</div>
+		</a>
+		<a href="#" class="tuihuo t1">
+			<i class="baoz"></i>
+			<div class="sever">
+			<span>99元起</span>
+			<span>全场免运费</span>
+			</div>
+		</a>
+		<a href="#" class="tuihuo t1">
+			<i class="baoz"></i>
+			<div class="sever">
+			<span>579家</span>
+			<span>售后服务点</span>
+			</div>
+		</a>
+	</div>
+</div>
+<!--详细信息-->
+<div class="about_g">
+	<div class="about">
+		<ul class="about_jin">
+			<li><a href="#">关于金立</a></li>
+			<li><a href="#">企业荣誉</a></li>
+			<li><a href="#">金立体验店</a></li>
+			<li><a href="#">代理商专区</a></li>
+			<li><a href="#">加入金立</a></li>
+			<li><a href="#">联系我们</a></li>
+			<li><a href="#">供应/服务商需求资讯</a></li>	
+		</ul>
+		<ul class="about_jin">
+			<li><a href="#">新闻资讯</a></li>
+			<li><a href="#">公司新闻</a></li>
+			<li><a href="#">媒体报道</a></li>
+		</ul>
+		<ul class="about_jin">
+			<li><a href="#">购物指南</a></li>
+			<li><a href="#">购物流程</a></li>
+			<li><a href="#">支付方式</a></li>
+			<li><a href="#">配送说明及费用</a></li>
+			<li><a href="#">订单管理</a></li>
+			<li><a href="#">购买常见问题</a></li>
+			<li><a href="#">预置应用公示</a></li>	
+		</ul>
+		<ul class="about_jin">
+			<li><a href="#">售后服务</a></li>
+			<li><a href="#">售后政策</a></li>
+			<li><a href="#">售后服务网点</a></li>
+			<li><a href="#">上门维修</a></li>
+			<li><a href="#">签收须知</a></li>
+			<li><a href="#">物流查询</a></li>
+		</ul>
+		<ul class="about_jin j1">
+			<li><a href="#">关于我们</a></li>
+			<li class="xinl"><a href="https://www.sina.com.cn/"><span></span><span>新浪微博&nbsp;</span></a></li>
+			<li class="xinl t11"><a href="http://reg.t.qq.com/"><span></span><span>腾讯微博&nbsp;</span></a></li>
+			<li class="xinl t12"><a href="https://qzone.qq.com/"><span></span><span>QQ空间&nbsp;</span></a></li>	
+		</ul>
+		<ul class="weixin">
+			<li><span></span></li>
+			<li><span>扫一扫关注微信</span></li>
+		</ul>
+	</div>
+</div>
+<!--footer-->
+<div class="footer">
+	<div class="footer_w1">
+		<ul class="map">
+			<li class="map_first"><a href="#">网站地图</a></li>
+			<li class="map_second">
+				<ul class="map_three">
+					<li>集团下属公司<span class="small"></span></li>
+					<div class="map_t_li">
+						<li>欧新通信</li>
+						<li>奥软网络</li>
+					</div>
+					
+				</ul>
+			</li>
+		</ul>
+		<div class="footer_w2">
+			<div class="dianxi">增值电信业务经营许可证：
+				<a href="#">粤B2-20120350</a>
+				<a href="#">粤ICP备05087105号</a>
+				<a href="#">粤网文[2015]2233-484号</a>
+				<a href="#">粤文市审[2012]196号</a>
+				<span class="footer_w3">
+					<a href="#">
+						<img src="img/a.png"/>
+					</a>
+					<a href="#">
+						<img src="img/c.gif"/>
+					</a>
+					<a href="#">
+						<img src="img/b.png"/>
+					</a>
+				</span>
+				<p class="footer_w5">
+					<a class="English" href="#">
+						Global/English
+					</a>
+					<a href="#">
+						中国/简体中文
+						<span class="addspan">+</span>
+						<span class="jianspan">-</span>
+					</a>
+				</p>
+			</div>
+			
+		</div>
+		<p class="footer_w4">Copyright © 2013 深圳市金立通信设备有限公司 版权所有 .</p>
+	</div>
+</div>
 </body>
 </html>
+<script type="text/javascript" src="js/jquery-1.8.3.js"></script>
+<script type="text/javascript" src="js/checkall.js"></script>
+<script type="text/javascript">
+	
+	$(function(){
+	  	//滑过盒子，出现子类效果
+	  	let index = 0;
+	  	$(".gongz2").find("li").hover(
+	  		function(){
+		  		$(this).css({background:"white",color:"#ef4222","border-top":"2px solid #ef4222"});
+//		  		console.log($(this).index());
+		  		if($(this).index()==0){
+		  			$(".imgs").css({
+		  				"display":"block"
+		  			})
+		  		}else{
+		  			$(".imgs").css({
+		  				"display":"none"
+		  			})
+		  		}
+		  		if($(this).index()==1){
+		  			$(".canshun").css({
+		  				"display":"block"
+		  			})
+		  		}else{
+		  			$(".canshun").css({
+		  				"display":"none"
+		  			})
+		  		}
+		  		if($(this).index()==2){
+		  			$(".baob").css({
+		  				"display":"block"
+		  			})
+		  		}else{
+		  			$(".baob").css({
+		  				"display":"none"
+		  			})
+		  		}
+		  		
+		  	},
+		  	function(){
+		  		$(this).css({background:"#f1f1f1",color:"#00080c","border-top":"#dddddd"})
+		  	},
+	  	)
+		//集团下属公司的划过效果
+		$(".map_three").hover(function(){
+			$(".map_t_li").slideDown(500);
+		},function(){
+			$(".map_t_li").slideUp(500);
+		});	
+	//划过简体
+	$(".footer_w5").hover(function(){
+		$("a.English").addClass("English_hide");
+	},function(){
+		$("a.English").removeClass("English_hide");
+	});
+	$(window).scroll(function(){
+		let scrollTop = $(window).scrollTop();
+		if(scrollTop>1){
+			$(".header").css({
+			"position":"fixed",
+			"top":"0px",
+			"left":"0px",
+			"z-index":"4"
+			})
+		}
+		else{
+			$(".header").css({
+			position:"static"
+			})
+		}
+		
+	});
+	
+	//购物车加数量
+	let price=$(".goods2_c6span").html();
+	$(".add").on("click",(function(){
+		let count=$(this).prev(".number").html();
+		count = parseInt(count) + 1;
+		if(count>50){
+			conut=50;
+		}
+		let money=parseInt(count)*parseInt(price);
+		$(this).prev(".number").html(count);
+		$(this).parent().parent().find(".goods2_c6span").html(money);
+	}));
+	$(".reduce").on("click",(function(){
+		let count=$(this).next(".number").html();
+		count=parseInt(count)-1;
+		
+		if(count<1){
+			count=1;
+		}
+		let money=parseInt(count)*parseInt(price);
+		$(this).next(".number").html(count);
+		$(this).parent().parent().find(".goods2_c6span").html(money);
+	}));
+	
+//	let zmoney=0;
+//	let current=$(price);
+//	for(let i in $(price)){
+//		$(zmoney)=current+$(price)[i];
+//	}
+//	$(".price_pay").html($(zmoney));
+	//让删除的盒子隐藏
+	$(".remove").on("click",(function(){
+		$(".isremove").css({
+			"display":"block"
+		})
+		$(".ok").click(function(){
+			$(".goods2_c1").remove()
+		})
+		$(".no").click(function(){
+			$(".isremove").css({
+			"display":"none"
+		})
+		})
+	}));
+	
+//	var count=$(".goods2").length;
+//	if(count=<0){
+//		$(".shopcar_s1").css({
+//			"display":"block"
+//		})
+//	}
+
+	//全选框
+	$(".goods_q1").bindCheckAll($(":checkbox").not(".goods_q1"));
+	$(".goods2_c3").click(function(){
+		
+		if($(".goods2_c3").is(":checked")){
+			let price=$(".goods2_c6span").html();
+			$(".price_pay").html(price);	
+		}else{
+			let price=0;
+			$(".price_pay").html(price);
+		}
+	});
+	$(".goods_q1").click(function(){
+		let zmoney=0;
+		if($(".goods_q1").is(":checked")){
+			$(".goods2_c6span").each(function(){
+				zmoney+=parseInt($(this).html());
+				console.log(zmoney);
+				$(".price_pay").html(zmoney);
+			})
+		}else{
+			$(".price_pay").html(zmoney);
+		}
+	})
+	
+	
+})
+</script>
