--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<ul class="index">
 			<li><a href="#">首页</a></li>
 			<li id="btn01" >
-				<a href="#">手机</a>
+				<a href="shangplb.html">手机</a>
 				<div class="child">
 						<ul class="big_one top">
 						<li><a href="#">最新&gt;</a></li>
